# misis2024s-23-04-faizov-d-i

./: CMakeLists.txt  README.md  codeforces.id  status.md
prj.app/RoboRun/: RoboRun.cpp
prj.codeforces/: 0001a.cpp  0050a.cpp  0069.cpp  0069a.cpp  0071A  0096a.cpp  0116.cpp  0136b.cpp  0158a.cpp  0231a.cpp  0263a.cpp  0266a.cpp  0271a.cpp  0276a.cpp  0281a.cpp  0282a.cpp  0339b.cpp  0617a.cpp  0731a.cpp  0935b.cpp  0978a.cpp  0978b.cpp  1330a.cpp  1352a.cpp  1559a.cpp  1585a.cpp  1669a.cpp  1669d.cpp  1670b.cpp  1676b.cpp  1690d.cpp  1721b.cpp  1734b.cpp  1855a.cpp  1857a.cpp  1872a.cpp  1873b.cpp  1873c.cpp  1873d.cpp  CMakeLists.txt
prj.fpp/RoboRun/: RoboRun.cpp
prj.lab/: CMakeLists.txt
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.hpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.h  complex.hpp
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.h
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.h  rational.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.cpp  stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.test/: CMakeLists.txt  test_complex.cpp
